Fix asyncAPI contract

--- a/asyncapi/shopify/asyncapi.yml
+++ b/asyncapi/shopify/asyncapi.yml
@@ -761,7 +761,7 @@ components:
           type: integer
           description: The unique identifier for the refund that the order adjustment is associated with.
         amount:
-          type: integer
+          type: string
           description: The value of the discrepancy between the calculated refund and the actual refund. If the kind property's value is shipping_refund, then amount returns the value of shipping charges refunded to the customer.
         tax_amount:
           type: string
@@ -832,7 +832,7 @@ components:
       type: object
       properties:
         amount:
-          type: integer
+          type: string
           description: The amount that is owed according to the payment terms.
         currency:
           type: string
@@ -856,7 +856,7 @@ components:
       type: object
       properties:
         amount:
-          type: integer
+          type: string
           description: The amount that is owed according to the payment terms.
         currency:
           type: string
