Update tribber build logic

--- a/build.gradle
+++ b/build.gradle
@@ -46,7 +46,7 @@ if (project.hasProperty("release")){
     release = new Boolean(project.property("release").toString())
 }
 
-def specificTrigger = "";
+def specificTrigger = "asgardeo";
 if (project.hasProperty("trigger")){
     specificTrigger = project.property("trigger").toString()
 }
@@ -66,8 +66,11 @@ task codeBuild {
     doLast {
         println "Task: Building triggers..."
         for (String path : ballerinaPackages) {
-            if (!path.contains("asgardeo")) {
-                continue;
+            if (!(path.contains("asb") || path.contains("salesforce") || path.contains("asgardeo") || 
+            path.contains("hubspot") || path.contains("quickbooks"))) {
+                exec {
+                    commandLine 'sh', '-c', "${ballerinaDistributionPath}/bin/bal test ${path}"
+                }
             }
             exec {
                 commandLine 'sh', '-c', "${ballerinaDistributionPath}/bin/bal pack ${path}"
@@ -77,9 +80,6 @@ task codeBuild {
         if (!release) {
             println "Task: Pushing triggers to local..."
             for (String path : ballerinaPackages) {
-                if (!path.contains("asgardeo")) {
-                    continue;
-                }
                 try {
                     exec {
                         workingDir "${path}"
@@ -98,10 +98,7 @@ task releaseTrigger {
     doLast {
         if(release){
             println "Task: Pushing triggers to Ballerina Central..."
-            for (String path : ballerinaPackages) {    
-                if (!path.contains("asgardeo")) {
-                    continue;
-                }      
+            for (String path : ballerinaPackages) {          
                 try {
                     exec {
                         println "Pushing trigger [" + path + "] to Ballerina Central"
