--- a/gradle.properties
+++ b/gradle.properties
@@ -5,12 +5,12 @@ puppycrawlCheckstyleVersion=8.18
 testngVersion=6.14.3
 slf4jVersion=1.7.30
 log4jVersion=1.2.17
-githubSpotbugsVersion=4.0.5
+githubSpotbugsVersion=6.0.18
 githubJohnrengelmanShadowVersion=5.2.0
 underCouchDownloadVersion=4.0.4
 researchgateReleaseVersion=2.8.0
 checkstyleToolVersion=7.8.2
-ballerinaLangVersion=2201.4.1
+ballerinaLangVersion=2201.11.0-20250127-101700-a4b67fe5
 
 // SFDC trigger
 sfdc_trigger_group=io.ballerina.sfdc
@@ -18,7 +18,7 @@ sfdc_trigger_version=0.10.0
 
 // Azure service bus trigger
 asb_trigger_group=io.ballerinax.asb
-asb_trigger_version=1.1.0
+asb_trigger_version=1.2.0
 asb_sdk_version=7.13.1
 
 // Asgardeo trigger
