--- a/asyncapi/asgardeo/Ballerina.toml
+++ b/asyncapi/asgardeo/Ballerina.toml
@@ -5,14 +5,14 @@ org = "ballerinax"
 name = "trigger.asgardeo"
 repository = "https://github.com/ballerina-platform/asyncapi-triggers"
 version = "0.5.0"
-distribution = "2201.4.1"
+distribution = "2201.11.0-20250127-101700-a4b67fe5"
 icon = "docs/icon.png"
 authors = ["Ballerina"]
 
 [build-options]
 observabilityIncluded = true
 
-[[platform.java11.dependency]]
+[[platform.java21.dependency]]
 groupId = "io.crypto"
 artifactId = "decryption-native"
 version = "1.0-SNAPSHOT"
