--- a/asyncapi/salesforce/Ballerina.toml
+++ b/asyncapi/salesforce/Ballerina.toml
@@ -6,13 +6,13 @@ name = "trigger.salesforce"
 repository = "https://github.com/ballerina-platform/asyncapi-triggers"
 version = "0.10.0"
 icon="docs/icon.png"
-distribution = "2201.4.1"
+distribution = "2201.11.0-20250127-101700-a4b67fe5"
 authors = ["Ballerina"]
 
 [build-options]
 observabilityIncluded = true
 
-[[platform.java11.dependency]]
+[[platform.java21.dependency]]
 path = "../../native/sfdc/build/libs/sfdc-0.10.0-all.jar"
 groupId = "io.ballerina.sfdc"
 artifactId = "sfdc"
