--- a/asyncapi/twilio/Ballerina.toml
+++ b/asyncapi/twilio/Ballerina.toml
@@ -6,7 +6,7 @@ name = "trigger.twilio"
 repository = "https://github.com/ballerina-platform/asyncapi-triggers"
 version = "0.9.0"
 icon = "docs/icon.png"
-distribution = "2201.4.1"
+distribution = "2201.11.0-20250127-101700-a4b67fe5"
 authors = ["Ballerina"]
 
 [build-options]
