Update CI build and daily-build to build and test only slack trigger

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
           packageUser: ${{ github.actor }}
           packagePAT: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          ./gradlew build -Prelease=false
+          ./gradlew build -Prelease=false -Ptrigger=slack
