--- a/.github/workflows/daily_build.yml
+++ b/.github/workflows/daily_build.yml
@@ -31,4 +31,4 @@ jobs:
           packageUser: ${{ secrets.BALLERINA_BOT_USERNAME }}
           packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
         run: |
-          ./gradlew build -Prelease=false -Ptrigger=slack
+          ./gradlew build -Prelease=false
