--- a/asyncapi/asb/Dependencies.toml
+++ b/asyncapi/asb/Dependencies.toml
@@ -5,6 +5,7 @@
 
 [ballerina]
 dependencies-toml-version = "2"
+distribution-version = "2201.11.0"
 
 [[package]]
 org = "ballerina"
@@ -37,7 +38,7 @@ modules = [
 [[package]]
 org = "ballerinax"
 name = "trigger.asb"
-version = "1.1.0"
+version = "1.2.0"
 dependencies = [
 	{org = "ballerina", name = "jballerina.java"},
 	{org = "ballerinai", name = "observe"}
