--- a/.github/workflows/daily_build.yml
+++ b/.github/workflows/daily_build.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   dailyBuild:
     runs-on: ubuntu-latest
+    env:
+      packageUser: ${{ secrets.BALLERINA_BOT_USERNAME }}
+      packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
