Update build scripts

--- a/native/asb/build.gradle
+++ b/native/asb/build.gradle
@@ -13,7 +13,15 @@ configurations {
 }
 
 repositories {
-    mavenCentral()
+    mavenLocal()
+
+    maven {
+        url = 'https://maven.wso2.org/nexus/content/groups/wso2-public/'
+    }
+
+    maven {
+        url = 'https://repo.maven.apache.org/maven2'
+    }
 
     maven {
         url = 'https://maven.pkg.github.com/ballerina-platform/ballerina-lang'
