--- a/native/sfdc/build.gradle
+++ b/native/sfdc/build.gradle
@@ -29,7 +29,16 @@ group = project.sfdc_trigger_group
 version = project.sfdc_trigger_version
 
 repositories {
-    mavenCentral()
+    mavenLocal()
+
+    maven {
+        url = 'https://maven.wso2.org/nexus/content/groups/wso2-public/'
+    }
+
+    maven {
+        url = 'https://repo.maven.apache.org/maven2'
+    }
+
     maven {
         url = 'https://maven.pkg.github.com/ballerina-platform/ballerina-lang'
         credentials {
