--- a/asyncapi/identity.server/Ballerina.toml
+++ b/asyncapi/identity.server/Ballerina.toml
@@ -1,6 +1,6 @@
 [package]
 org = "ballerinax"
-name = "wso2.identity.server"
+name = "trigger.identityserver"
 version = "0.9.0"
 distribution = "2201.12.9"
 
